[gd_scene load_steps=6 format=3 uid="uid://cm35o7dxxp1hy"]

[ext_resource type="Texture2D" uid="uid://cdqbw82odjn3a" path="res://Buttons/button.png" id="1_dk4hn"]
[ext_resource type="Texture2D" uid="uid://drvay7e0u6lee" path="res://Assets/Images/lezar_baby1.png" id="2_tmgvu"]
[ext_resource type="Script" path="res://Buttons/enclosure_creature_item.gd" id="2_y72ma"]
[ext_resource type="Texture2D" uid="uid://buku36rjx26uk" path="res://Buttons/coloruncomon.png" id="3_p8fku"]
[ext_resource type="Texture2D" uid="uid://mt1xw5bmbb44" path="res://Buttons/stargold.png" id="4_6q2ae"]

[node name="EnclosureCreatureItem" type="TextureButton"]
self_modulate = Color(0.72549, 0.72549, 0.870588, 1)
texture_filter = 1
custom_minimum_size = Vector2(250, 250)
texture_normal = ExtResource("1_dk4hn")
stretch_mode = 5
script = ExtResource("2_y72ma")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 65.0
offset_right = -40.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(135, 141.8)
texture = ExtResource("2_tmgvu")
expand_mode = 1
stretch_mode = 5

[node name="LabelName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 7.0
offset_right = 85.0
offset_bottom = 54.0
grow_horizontal = 2
pivot_offset = Vector2(79, 17)
text = "TODO NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelTime" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -52.0
offset_right = 84.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
text = "TODO TIME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 21.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 62.0
texture = ExtResource("3_p8fku")
expand_mode = 1
stretch_mode = 5

[node name="TypeTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -42.0
offset_top = 29.0
offset_bottom = 71.0
grow_horizontal = 0
pivot_offset = Vector2(21, 21)
texture = ExtResource("4_6q2ae")
expand_mode = 1
stretch_mode = 5
